--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -19,6 +19,13 @@
         // transparent
         border-bottom: 3px solid transparent;
         transition: all 0.2s ease;
+        @include respond(tab-port) {
+            margin: 0 auto;
+        }
+        @include respond(phone) {
+            margin: 0 auto;
+            width: 100%;
+        }
 
         &:focus {
             outline: none;
@@ -54,6 +61,9 @@
         display: inline-block;
         width: 45%;
         margin: 0 auto;
+        // @media screen and (max-width: 400px) {
+        //     width: 100%;
+        // }
     }
     &__radio-input {
         vertical-align: middle;
@@ -65,6 +75,7 @@
         border-radius: 50%;
         position: relative;
         // change the border to an outline and add a radius to it
+
         &:checked::after {
             content: "";
             position: absolute;
@@ -75,6 +86,9 @@
             width: 1.5rem;
             height: 1.5rem;
             border-radius: 50%;
+            @include respond(tab-port) {
+                transform: translate(9%, 8%);
+            }
         }
         // &:checked {
         //     background-color: $primary-dark-green;
